# CeleritasRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  InitModules.py  README.md  VUID-vkCmdClearColorImage-imageLayout-00005(ERROR
CeleritasDX/: .gitignore  CMakeLists.txt
CeleritasDX/src/cxx/: main.cpp
CeleritasDX/src/cxx/DirectXContext/: DirectXDevice.h  DirectXFrameBuffer.h  DirectXShader.h  DirectXSwapChain.h
CeleritasDX/src/cxx/Util/: ShaderLoader.h  StringUtil.h
CeleritasDX/src/cxx/Window/: Monitor.h  Window.h
CeleritasEngine/: CMakeLists.txt  CeleritasEngine.kdev4  ShaderConfFileFormat.txt
CeleritasEngine/.kdev4/: CeleritasEngine.kdev4
CeleritasEngine/shaders/DirectLightShadowBuffer/: main.frag  main.vert
CeleritasEngine/shaders/GBufferPBR/: main.frag  main.vert
CeleritasEngine/shaders/GBufferPBRParser/: main.frag  main.vert
CeleritasEngine/shaders/GameAssemblyPipeline/: main.frag
CeleritasEngine/shaders/OutputPipeline/: main.frag
CeleritasEngine/shaders/ShadowAssemblePipeline/: main.frag  main.vert
CeleritasEngine/src/cxx/: TestKeyboardCallback.h  TestMouseCallback.h  main.cpp
CeleritasEngine/src/cxx/Engine/: Engine.h  RenderPipeline.h  ShadowManager.h
CeleritasEngine/src/cxx/Engine/Camera/: CameraManager.h  CameraMovementCallBack.h  CameraResizeCallBack.h  CameraRotationCallBack.h
CeleritasEngine/src/cxx/Engine/GraphicalObjects/: Material.h  Mesh.h
CeleritasEngine/src/cxx/Engine/Pipelines/: AssemblyPipeline.h  GBufferPipeline.h  GameAssebmlyPipeline.h  GameAssemblyPipeline.h  ShadowAssemblyPipeline.h  ShadowBufferPipeline.h  ShadowToAOAssemblePipeline.h
CeleritasEngine/src/cxx/Engine/Pipelines/AssemblyPipeline/: AssemblyPipeline.h
CeleritasEngine/src/cxx/Engine/Pipelines/GamePipeline/: GBufferPipeline.h
CeleritasEngine/src/cxx/Engine/Pipelines/UIPipeline/: UIPipeline.h
CeleritasEngine/src/cxx/Engine/PrimitiveObjects/: Quad.h
CeleritasEngine/src/cxx/Util/: AssetLoader.h  ModelLoader.h  StringUtil.h
CeleritasEngine/src/cxx/Vulkan/: VulkanEndRenderPipeline.h  VulkanSwapChain.h
CeleritasEngine/src/cxx/Vulkan/VulkanDevice/: VulkanDevice.h
CeleritasEngine/src/cxx/Vulkan/VulkanImage/: VulkanImage.h
CeleritasEngine/src/cxx/Vulkan/VulkanLogger/: VulkanLogger.h
CeleritasEngine/src/cxx/Window/: IWindowResizeCallback.h  Window.h
CeleritasGL/: .gitignore  CMakeLists.txt
CeleritasGL/shaders/AssemblyTest/: .shaderconf  assembly.frag  assembly.vert
CeleritasGL/shaders/DeferredTest/: .shaderconf  deferred.frag  deferred.vert
CeleritasGL/src/cxx/: main.cpp
CeleritasGL/src/cxx/OpenGL/: GLCShader.h  GLElementBuffer.h  GLVertexArrayObject.h  GLVertexBuffer.h
CeleritasGL/src/cxx/OpenGL/GLCFrameBuffer/: GLCDepthTexture.h  GLCFrameBuffer.h  GLCFrameBufferTexture.h
CeleritasGL/src/cxx/OpenGL/GLCVertices/: GLCElementBuffer.h  GLCVertexArrayObject.h  GLCVertexBuffer.h
CeleritasGL/src/cxx/Util/: IDestroyableObject.h  ShaderConfParser.h  ShaderLoader.h
CeleritasGL/src/cxx/Window/: Window.h
SceneImporter/: pom.xml
models/vaze/: Vaze.fbx
modules/glad/: CMakeLists.txt
modules/glad/include/glad/: glad.h
modules/glad/src/: glad.c
shaders/DirectLightShadowBuffer/: main.vert
shaders/GBufferPBR/: .shaderconf  main.frag  main.vert
shaders/GameAssemblyPipeline/: main.frag  main.vert
shaders/OutputPipeline/: .shaderconf  main.frag
shaders/ShadowAssemblePipeline/: main.frag
shaders/SkyboxPipeline/: main.frag  main.vert
shaders/TestVulkanShader/: .shaderconf  default.frag  default.vert
shaders/UIPipeline/: .shaderconf  main.frag  main.vert
src/cxx/: TestKeyboardCallback.h  main.cpp
src/cxx/Engine/: Engine.h  RenderPipeline.h
src/cxx/Engine/Camera/: CameraMovementCallBack.h
src/cxx/Engine/GraphicalObjects/: Material.h
src/cxx/Engine/Pipelines/: AssemblyPipeline.h  DirectLightShadowAssemblyPipeline.h  DirectLightShadowBuffer.h  GameAssebmlyPipeline.h
src/cxx/Engine/Pipelines/AssemblyPipeline/: AssemblyPipeline.h
src/cxx/Engine/Pipelines/GamePipeline/: GBufferPipeline.h  PBRPipeline.h
src/cxx/Engine/Pipelines/UIPipeline/: UIPipeline.h
src/cxx/Engine/RenderingEngine/: RenderPipeline.cpp  RenderPipeline.h  RenderPipelineBuilder.cpp  RenderPipelineBuilder.h  RenderingEngine.cpp  RenderingEngine.h  ShadowManager.h
src/cxx/Engine/RenderingEngine/Camera/: CameraManager.h  CameraMovementCallBack.h  CameraResizeCallBack.h  CameraRotationCallBack.h
src/cxx/Engine/RenderingEngine/GraphicalObjects/: Material.h  Mesh.h
src/cxx/Engine/RenderingEngine/PrimitiveObjects/: Cube.h  Quad.cpp  Quad.h  Skybox.cpp  Skybox.h
src/cxx/Engine/RenderingEngine/RenderPipelineImplementation/: AssemblyPipeline.h  DirectLightShadowAssemblyPipeline.h  DirectLightShadowBuffer.h  GBufferPipeline.h  GameAssebmlyPipeline.h  SkyboxPipeline.h
src/cxx/Engine/RenderingEngine/RenderingPipelines/: AssemblyPipeline.cpp  AssemblyPipeline.h  GBufferPipeline.cpp  GBufferPipeline.h  GameAssemblyPipeline.cpp  GameAssemblyPipeline.h  SkyboxPipeline.cpp  SkyboxPipeline.h
src/cxx/Engine/RenderingEngineSecond/: RenderPipelineBuilder.cpp  RenderPipelineBuilder.h  RenderPipelineSecond.cpp  RenderPipelineSecond.h  RenderingEngineSecond.cpp  RenderingEngineSecond.h
src/cxx/Engine/UI/: PBRSetupWindow.h  UIBase.h  UIManager.h
src/cxx/Util/: ModelLoader.h  ShaderConfParser.h  ShaderLoader.h
src/cxx/Vulkan/: VulkanEndRenderPipeline.h  VulkanRenderPass.h  VulkanRenderPipelineControl.h  VulkanSwapChain.h
src/cxx/Vulkan/VulkanDescriptors/: IDescriptorObject.h  VulkanDescriptors.h
src/cxx/Vulkan/VulkanDevice/: VulkanDevice.h
src/cxx/Vulkan/VulkanGraphicsPipeline/: GraphicsPipelineConfigurer.h  PipelineEndConfiguration.h  PipelineImmediateConfig.h  VulkanGraphicsPipeline.h
src/cxx/Vulkan/VulkanImage/: VulkanCubemapImage.h  VulkanImage.h
src/cxx/Vulkan/VulkanRenderingPipeline/: VulkanRenderPass.h
src/cxx/Vulkan/VulkanSync/: VulkanOneFrameSync.h  VulkanSyncManager.h  VulkanThreeFrameSync.h
src/cxx/Window/: IKeyActionCallback.h  IMouseMovementCallback.h  Monitor.h  Window.cpp  Window.h  Window.hpp
(+48 files in other folders)
